[gd_scene load_steps=18 format=2]

[ext_resource path="res://sky_boxes/space_skybox_03.png" type="Texture" id=1]
[ext_resource path="res://sky_boxes/space_skybox_01.png" type="Texture" id=2]
[ext_resource path="res://sky_boxes/space_skybox_02.png" type="Texture" id=3]
[ext_resource path="res://scenes/Explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/MiniMap.tscn" type="PackedScene" id=6]
[ext_resource path="res://scripts/PlayingField.gd" type="Script" id=8]
[ext_resource path="res://themes/label_theme.tres" type="Theme" id=9]
[ext_resource path="res://scripts/Level.gd" type="Script" id=10]
[ext_resource path="res://icon.png" type="Texture" id=11]

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.5, 1, 80.5 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.5, 1, 50 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.560784, 0, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
expand_margin_top = 5.0

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Status:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "blinking_text"
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Status:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FormationAttack:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="AnimatedTexture" id=6]
flags = 4
frames = 3
frame_0/texture = ExtResource( 2 )
frame_0/delay_sec = 0.5
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.5
frame_2/texture = ExtResource( 1 )
frame_2/delay_sec = 0.5

[sub_resource type="PanoramaSky" id=4]
panorama = SubResource( 6 )

[sub_resource type="Environment" id=5]
background_mode = 2
background_sky = SubResource( 4 )
ambient_light_color = Color( 0.94902, 0.94902, 0.94902, 1 )
ambient_light_sky_contribution = 0.8

[node name="Level" type="Spatial"]
script = ExtResource( 10 )

[node name="PlayingField" type="Area" parent="."]
transform = Transform( 2.6, 0, 0, 0, 1, 0, 0, 0, 2.6, 0, 0, 0 )
script = ExtResource( 8 )

[node name="LimitLeft" type="CollisionShape" parent="PlayingField"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 0, 0 )
shape = SubResource( 7 )

[node name="LimitRight" type="CollisionShape" parent="PlayingField"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 0, 0 )
shape = SubResource( 7 )

[node name="LimitTop" type="CollisionShape" parent="PlayingField"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -80 )
shape = SubResource( 8 )

[node name="LimitBottom" type="CollisionShape" parent="PlayingField"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 80 )
shape = SubResource( 8 )

[node name="OverView" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="PlayerViewportContainer" type="ViewportContainer" parent="OverView"]
margin_right = 664.0
margin_bottom = 600.0

[node name="Viewport" type="Viewport" parent="OverView/PlayerViewportContainer"]
size = Vector2( 664, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="TopDownCamera" type="Camera" parent="OverView/PlayerViewportContainer/Viewport"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 68.943, 0 )
current = true

[node name="ViewportLabel" type="Label" parent="OverView/PlayerViewportContainer"]
margin_right = 664.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 9 )
text = "Ready"
align = 1
valign = 1
uppercase = true

[node name="SideMenu" type="MarginContainer" parent="OverView"]
margin_left = 668.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 0

[node name="SideMenuItems" type="VBoxContainer" parent="OverView/SideMenu"]
margin_left = 30.0
margin_top = 30.0
margin_right = 326.0
margin_bottom = 600.0

[node name="HiScoreLabel" type="Label" parent="OverView/SideMenu/SideMenuItems"]
margin_right = 296.0
margin_bottom = 26.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
text = "Hi-Score"
uppercase = true

[node name="HiScore" type="Label" parent="OverView/SideMenu/SideMenuItems"]
margin_top = 30.0
margin_right = 296.0
margin_bottom = 56.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
text = "1000"
align = 2

[node name="CurrentScore" type="Label" parent="OverView/SideMenu/SideMenuItems"]
margin_top = 60.0
margin_right = 296.0
margin_bottom = 86.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
text = "1000"
align = 2

[node name="StatusContainer" type="VBoxContainer" parent="OverView/SideMenu/SideMenuItems"]
margin_top = 90.0
margin_right = 296.0
margin_bottom = 146.0

[node name="Condition" type="Label" parent="OverView/SideMenu/SideMenuItems/StatusContainer"]
margin_right = 296.0
margin_bottom = 26.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
text = "Condition"
uppercase = true

[node name="Status" type="Label" parent="OverView/SideMenu/SideMenuItems/StatusContainer"]
margin_top = 30.0
margin_right = 296.0
margin_bottom = 56.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/normal = SubResource( 9 )
text = "Green"
align = 1
uppercase = true

[node name="FormationAttack" type="Label" parent="OverView/SideMenu/SideMenuItems/StatusContainer"]
visible = false
margin_top = 60.0
margin_right = 296.0
margin_bottom = 86.0
theme = ExtResource( 9 )
custom_colors/font_color = Color( 0.803922, 0, 0, 1 )
text = "Formation Attack"
uppercase = true

[node name="FormationIcon" type="TextureRect" parent="OverView/SideMenu/SideMenuItems/StatusContainer"]
visible = false
margin_top = 90.0
margin_right = 26.0
margin_bottom = 116.0
rect_min_size = Vector2( 26, 26 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 11 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="OverView/SideMenu/SideMenuItems/StatusContainer"]
anims/RESET = SubResource( 10 )
anims/blinking_text = SubResource( 11 )

[node name="MiniMapContainer" type="CenterContainer" parent="OverView/SideMenu/SideMenuItems"]
margin_top = 150.0
margin_right = 296.0
margin_bottom = 500.0

[node name="MiniMap" parent="OverView/SideMenu/SideMenuItems/MiniMapContainer" instance=ExtResource( 6 )]
margin_left = 31.0
margin_top = 0.0
margin_right = 265.0
margin_bottom = 350.0
playing_field_path = NodePath("../../../../../PlayingField")

[node name="LifeIcon" type="TextureRect" parent="OverView/SideMenu/SideMenuItems"]
visible = false
margin_top = 504.0
margin_right = 25.0
margin_bottom = 529.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 11 )
expand = true

[node name="LivesContainer" type="HBoxContainer" parent="OverView/SideMenu/SideMenuItems"]
margin_top = 504.0
margin_right = 296.0
margin_bottom = 529.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 10

[node name="RoundContainer" type="HBoxContainer" parent="OverView/SideMenu/SideMenuItems"]
margin_top = 533.0
margin_right = 296.0
margin_bottom = 559.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="OverView/SideMenu/SideMenuItems/RoundContainer"]
margin_right = 83.0
margin_bottom = 26.0
theme = ExtResource( 9 )
text = "round"
uppercase = true

[node name="CurrentRound" type="Label" parent="OverView/SideMenu/SideMenuItems/RoundContainer"]
margin_left = 87.0
margin_right = 296.0
margin_bottom = 26.0
size_flags_horizontal = 3
theme = ExtResource( 9 )
text = "1"
align = 2
uppercase = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )

[node name="Explosion" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -7.82349, 0, 21.6164 )
explode_on_start = true

[node name="Timer" type="Timer" parent="."]
pause_mode = 2
wait_time = 2.0

[connection signal="area_exited" from="PlayingField" to="PlayingField" method="_on_PlayingField_area_exited"]
[connection signal="body_entered" from="PlayingField" to="PlayingField" method="_on_PlayingField_body_entered"]
[connection signal="body_exited" from="PlayingField" to="PlayingField" method="_on_PlayingField_body_exited"]
